11.aiworker-os/runtime-execution-http-api/900.meta/20260508_115305_b6r95r3d_r1_f2_fix_sql_array_commas_no_post/040_node_check_after.err
/data/data/com.termux/files/home/03.civilization-development/11.aiworker-os/runtime-execution-http-api/server.js:1004
    "    'title', :'output_title_ja',",
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
